--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,10 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>groupID</groupId>
-    <artifactId>artifactID</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <groupId>li.priject.nc1</groupId>
+    <artifactId>StorkExpress</artifactId>
+    <version>1.0</version>
+    <packaging>war</packaging>
 
 
 </project>
