--- a/pom.xml
+++ b/pom.xml
@@ -73,7 +73,11 @@
             <artifactId>hibernate-core</artifactId>
             <version>4.2.1.Final</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.glassfish.main.extras</groupId>
+            <artifactId>glassfish-embedded-all</artifactId>
+            <version>3.1.2.2</version>
+        </dependency>
 
 
     </dependencies>
