--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>li.project.nc1</groupId>
     <artifactId>StorkExpress</artifactId>
-    <version>1.1.2</version>
+    <version>1.3.5</version>
     <packaging>war</packaging>
 
     <build>
@@ -72,6 +72,11 @@
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-core</artifactId>
             <version>4.2.1.Final</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>3.1.0</version>
         </dependency>
 
 
