--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -11,5 +11,8 @@
         <error-code>404</error-code>
         <location>/jsp/main.jsp</location>
     </error-page>
+    <error-page>
+        <location>/jsp/error.jsp</location>
+    </error-page>
 
 </web-app>
