--- a/pom.xml
+++ b/pom.xml
@@ -83,7 +83,11 @@
             <artifactId>gson</artifactId>
             <version>2.6.2</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+            <version>4.3.0.RELEASE</version>
+        </dependency>
 
 
     </dependencies>
