--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
     <packaging>war</packaging>
 
     <build>
+        <!--<finalName>com.package.vlad</finalName>-->
         <plugins>
 
             <plugin>
@@ -82,11 +83,6 @@
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
             <version>2.6.2</version>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-web</artifactId>
-            <version>4.3.0.RELEASE</version>
         </dependency>
 
 
