--- a/pom.xml
+++ b/pom.xml
@@ -6,11 +6,10 @@
 
     <groupId>li.project.nc1</groupId>
     <artifactId>StorkExpress</artifactId>
-    <version>1.6.0</version>
+    <version>1.7.1</version>
     <packaging>war</packaging>
-
     <build>
-        <!--<finalName>com.package.vlad</finalName>-->
+        <!--<finalName>StorkExpress</finalName>-->
         <plugins>
 
             <plugin>
