--- a/pom.xml
+++ b/pom.xml
@@ -102,6 +102,12 @@
             <version>3.8</version>
         </dependency>
 
+        <dependency>
+            <groupId>axis</groupId>
+            <artifactId>axis</artifactId>
+            <version>1.4</version>
+        </dependency>
+
     </dependencies>
 
 </project>
